Closed Bug 186643 Opened 22 years ago Closed 22 years ago

del key at the end of the urlbar asserts

Categories

(Core :: DOM: Editor, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.3beta

People

(Reporter: timeless, Assigned: timeless)

Details

(Keywords: assertion)

Attachments

(1 file, 1 obsolete file)

cvs build from sunday afternoon, no patches to editor.

place the cursor at the end of the urlbar input and press delete.

###!!! ASSERTION: null node passed to nsHTMLEditUtils::NodeIsType: 'aNode', file
i:/build/mozilla/editor/libeditor/text/nsTextEditUtils.cpp, line 54
Break: at file i:/build/mozilla/editor/libeditor/text/nsTextEditUtils.cpp, line 54

nsTextEditUtils::NodeIsType(nsIDOMNode * 0x00000000, const nsAString & {...})
line 55
nsTextEditUtils::IsBreak(nsIDOMNode * 0x00000000) line 86 + 26 bytes
nsTextEditRules::WillDeleteSelection(nsISelection * 0x0e874418, short 1, int *
0x0012e944, int * 0x0012e980) line 940 + 27 bytes
nsTextEditRules::WillDoAction(nsTextEditRules * const 0x0e8752a0, nsISelection *
0x0e874418, nsRulesInfo * 0x0012e948, int * 0x0012e944, int * 0x0012e980) line
292 + 28 bytes
nsPlaintextEditor::DeleteSelection(nsPlaintextEditor * const 0x0e8740e0, short
1) line 962 + 59 bytes
nsTextEditorKeyListener::KeyPress(nsTextEditorKeyListener * const 0x0e876458,
nsIDOMEvent * 0x161a1b10) line 274b
confirming using debug linux build 20021220.
OS: Windows 2000 → All
Hardware: PC → All
Attached patch fix (obsolete) — Splinter Review
Attachment #110090 - Flags: superreview?(kin)
Attachment #110090 - Flags: review?(jfrancis)
Comment on attachment 110090 [details] [diff] [review]
fix

r=glazman
Attachment #110090 - Flags: review?(jfrancis) → review+
Comment on attachment 110090 [details] [diff] [review]
fix

Wait, I am reconsidering my r=. I would rather see the nulltest in
http://lxr.mozilla.org/seamonkey/source/editor/libeditor/text/nsTextEditRules.c
pp#939
Attachment #110090 - Flags: review+ → review-
Attached patch simpler fixSplinter Review
Just a null check is all we need.  Thanks for investigating this timeless.
Attachment #110090 - Attachment is obsolete: true
Attachment #111891 - Flags: superreview?(kin)
Attachment #111891 - Flags: review+
Target Milestone: --- → mozilla1.3beta
Attachment #111891 - Flags: superreview?(kin) → superreview+
checked in, thanks
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Attachment #110090 - Flags: superreview?(kin)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: