Bug 186643 del key at the end of the urlbar asserts r=jfrancis sr=bz